// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addIntoWatch no signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch no signed order fillable 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`addIntoWatch no signed order fillable 3`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`addIntoWatch with signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order fillable 2`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`addIntoWatch with signed order non fillable 1`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "update",
    },
  ],
]
`;

exports[`addIntoWatch with signed order non fillable 2`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order non fillable 3`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`handle orderUpdate add 1`] = `
Array [
  Array [
    "0xOrderHash",
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`handle orderUpdate terminate 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerAllowance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerAllowance 2`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "update",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerBalance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerBalance 2`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "update",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerFeeAllowance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerFeeAllowance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerFeeBalance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerFeeBalance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerAllowance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerAllowance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerBalance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerBalance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerFeeAllowance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerFeeAllowance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerFeeBalance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerFeeBalance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderCancelled 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderCancelled 2`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillExpired 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillExpired 2`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillRoundingError 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillRoundingError 2`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 2`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 3`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 4`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid default 1`] = `Array []`;

exports[`handleOrderWatcherUpdate isValid ask fill 1`] = `
Array [
  Array [
    1.23e-16,
    5.67e-16,
    undefined,
    false,
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid ask fill 2`] = `
Array [
  Array [
    "orderHash",
    1e-18,
    Object {
      "feeSchedules": Object {},
    },
    "pair",
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid ask fill 3`] = `
Array [
  Array [
    Object {
      "balance": 111,
      "fill": 2,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "pFill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid ask no fill 1`] = `
Array [
  Array [
    1.23e-16,
    5.67e-16,
    undefined,
    false,
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid ask no fill 2`] = `
Array [
  Array [
    Object {
      "balance": 111,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "update",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid bid fill 1`] = `
Array [
  Array [
    5.67e-16,
    1.23e-16,
    undefined,
    true,
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid bid fill 2`] = `
Array [
  Array [
    "orderHash",
    1e-18,
    Object {
      "feeSchedules": Object {},
    },
    "pair",
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid bid fill 3`] = `
Array [
  Array [
    Object {
      "balance": 111,
      "fill": 2,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "pFill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid bid no fill 1`] = `
Array [
  Array [
    5.67e-16,
    1.23e-16,
    undefined,
    true,
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid bid no fill 2`] = `
Array [
  Array [
    Object {
      "balance": 111,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "update",
    },
  ],
]
`;

exports[`loadOrders 1`] = `
Array [
  Array [
    "orderHash1",
  ],
  Array [
    "orderHash2",
  ],
]
`;

exports[`loadOrders 2`] = `
Array [
  Array [
    "orderHash3",
  ],
]
`;

exports[`remove from watch, exisitng order 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid no userOrder 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "method",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "status",
    },
  ],
]
`;

exports[`updateOrder isValid no userOrder 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid userOrder 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "method",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "status",
    },
  ],
]
`;
